--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.2",
-    "react-native-animatable": "^1.3.3"
+    "react-native-animatable": "^1.3.3",
+    "react-native-animated-radio-button": "0.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
