--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@freakycoder/react-native-bounceable": "^0.2.5",
     "react": "17.0.1",
-    "react-native": "0.64.1"
+    "react-native": "0.64.1",
+    "react-native-animated-radio-button": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
