--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "postversion": "git push && git push --tags"
   },
   "peerDependencies": {
-    "react": ">= 16.x.x",
-    "react-native": ">=0.63.x"
+    "@freakycoder/react-native-bounceable": ">= 0.2.5"
   },
   "devDependencies": {
     "@types/react": "^17.0.6",
@@ -59,8 +58,5 @@
       "npx prettier --write",
       "eslint src/*.js --fix-dry-run"
     ]
-  },
-  "dependencies": {
-    "@freakycoder/react-native-bounceable": "^0.2.5"
   }
 }
